# git-assets

./: Cargo.toml  README.md  default.nix  shell.nix
cli/: errors.rs  main.rs
nix/: derivation.nix  overlay.nix
src/: hash.rs  main.rs  store.rs
tests/: tests.rs
